# gwfa-gpu

./: README.md
exampleData/: grafo.gfa  read.fa
firstAttempt/: CMakeLists.txt  changes.patch
firstAttempt/include/: LCP.h  charBasedGeneticStructures.cc  charBasedGeneticStructures.cu  geneticStructures.h  graphStructure.h  integerBasedGeneticStructures.cc  integerBasedGeneticStructures.cu  lcp.h  parsingFunctions.h
firstAttempt/source/: CMakeLists.txt  geneticStructures.h  graphStructure.h  gwfa.cu  gwfa.hu  main.cpp  main.cu  parsingFunctions.h
